--- a/app/views/nursing_homes/edit.html.haml
+++ b/app/views/nursing_homes/edit.html.haml
@@ -1,7 +1,7 @@
-.body-copy
-  %h1 Redigera äldreboendet
+.main
+  .body-copy
+    %menu.actions
+      %li= link_to delete_icon_text, nursing_home_path(@nursing_home), confirm: 'Vill du ta bort äldreboendet?', method: :delete, class: "btn btn-danger btn-small"
+    %h1 Redigera äldreboendet
 
-%menu.actions
-  %li= link_to delete_icon_text, nursing_home_path(@nursing_home), confirm: 'Vill du ta bort äldreboendet?', method: :delete, class: "btn btn-danger btn-small"
-
-= render 'form'
+  = render 'form'
