--- a/app/assets/stylesheets/edit.css.scss
+++ b/app/assets/stylesheets/edit.css.scss
@@ -21,7 +21,7 @@
     }
   }
   .thumbs, .uploads, {
-    margin-left: 11em;
+    margin-left: 0;
     input.file {
       margin-bottom: 1.5em;
     }
