--- a/app/views/users/apply.html.haml
+++ b/app/views/users/apply.html.haml
@@ -1,5 +1,6 @@
-%h1= "Åtkomst till systemet Äldreboenden"
-%p= "Kontakta någon av följande administratörer för att ansöka om åtkomst till systemet för Äldreboenden"
-%ul
-  - @admin_users.each do |admin|
-    %li= "#{admin.displayname}, #{admin.email}"
+.main.body-copy
+  %h1= "Åtkomst till systemet Äldreboenden"
+  %p= "Kontakta någon av följande administratörer för att ansöka om åtkomst till systemet för Äldreboenden"
+  %ul
+    - @admin_users.each do |admin|
+      %li= "#{admin.displayname}, #{admin.email}"
