--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,22 +1,25 @@
-%h1= "Ny användare"
-%p.instructions Sök på personens användarnamn i personalkatalogen, t.ex. "cectro"
+.body-copy
+  %h1= "Ny användare"
+  %p.help Sök på personens användarnamn i personalkatalogen, t.ex. "cectro"
 
-= form_for(@user, :html => { :multipart => true, :class => 'basic-form', :id => 'edit-form' }) do |f|
-  - if @user.errors.any?
-    #error_explanation.warning
-      #h2 Vänligen korrigera följande uppgifter:
-      %ul
-        - @user.errors.full_messages.each do |msg|
-          %li= msg
-  .form-row
-    = f.label :username, 'Användarnamn:'
-    = f.text_field :username, :class => "medium"
-  .form-row
-    = f.label :displayname, "Namn:"
-    = f.text_field :displayname, :readonly => true, :tabindex => -1
-  .form-row
-    = f.label :email, "E-postadress:"
-    = f.text_field :email, :readonly => true, :tabindex => -1
-  .actions
-    = f.submit "Lägg till"
-    = link_to 'Avbryt', users_path, :class => 'cancel'
+  = form_for(@user, html: { multipart: true, class: 'form-horizontal', id: 'edit-form' }) do |f|
+    - if @user.errors.any?
+      #error_explanation.warning
+        #h2 Vänligen korrigera följande uppgifter:
+        %ul
+          - @user.errors.full_messages.each do |msg|
+            %li= msg
+
+    .control-group
+      .control-label= f.label :username, 'Användarnamn:'
+      .controls= f.text_field :username, class: "medium"
+    .control-group
+      .control-label= f.label :displayname, "Namn:"
+      .controls= f.text_field :displayname, readonly: true, tabindex: -1
+    .control-group
+      .control-label= f.label :email, "E-postadress:"
+      .controls= f.text_field :email, readonly: true, tabindex: -1
+    .control-group
+      .controls
+        = f.submit "Lägg till", class: "btn btn-primary"
+        = link_to 'Avbryt', users_path, class: 'btn'
