--- a/app/assets/stylesheets/edit.css.scss
+++ b/app/assets/stylesheets/edit.css.scss
@@ -58,7 +58,7 @@
     }
   }
   .count {
-    margin: .4em 0 1.5em 12em;
+    margin: .4em 0 1.5em;
     padding: .2em .5em;
     width: 11.8em;
     text-align: center;
