breadcrumbs in narrow widths

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -53,7 +53,7 @@ h1.title {
 
 ul#user-menu {
   float: right;
-  margin-top: .3em;
+  margin: .3em 0 1em;
   li {
     font-size: emize(13);
     font-family: $sansSerif;
