--- a/app/assets/stylesheets/media_queries.css.scss
+++ b/app/assets/stylesheets/media_queries.css.scss
@@ -43,3 +43,13 @@
     }
   }
 }
+
+@media (max-width: 40em) {
+  .breadcrumbs, ul#user-menu {
+    float: none;
+    clear: both;
+  }
+  ul#user-menu li {
+    margin-left: 0;
+  }
+}
