--- a/app/views/nursing_homes/not_found.html
+++ b/app/views/nursing_homes/not_found.html
@@ -1,2 +1,4 @@
-<h1>Sidan kunde inte hittas</h1>
-<p>Prova att söka efter sidan i sökfältet uppe till höger eller använd menyerna.</p>
+<div class="main show body-copy">
+  <h1>Sidan kunde inte hittas</h1>
+  <p>Prova att söka efter sidan i sökfältet uppe till höger eller använd menyerna.</p>
+</div>
