--- a/app/assets/stylesheets/media_queries.css.scss
+++ b/app/assets/stylesheets/media_queries.css.scss
@@ -1,3 +1,9 @@
+@media (min-width: 68em) {
+  #filter select {
+    width: emize(180);
+  }
+}
+
 @media (max-width: 68em) {
   body {
     min-width: 0;
