--- a/app/views/nursing_homes/compare.html.haml
+++ b/app/views/nursing_homes/compare.html.haml
@@ -1,7 +1,6 @@
 .actions
   = link_to 'Visa alla boenden', root_path, class: "btn btn-small"
-.body-copy
-  %h1 Jämför äldreboenden
+%h1.title Jämför äldreboenden
 #compare
   - unless @nursing_homes
     %p.no-records= link_to 'Lägg först till de äldreboenden du vill jämföra till "Min lista."', root_path
