--- a/app/assets/stylesheets/media_queries.css.scss
+++ b/app/assets/stylesheets/media_queries.css.scss
@@ -91,6 +91,11 @@
   }
 }
 
+@media (max-width: 32em) {
+  .actions.top {
+    display: none;
+  }
+}
 @media (max-width: 28em) {
   ul.results {
     .summary {
