--- a/app/views/nursing_homes/show.html.haml
+++ b/app/views/nursing_homes/show.html.haml
@@ -1,5 +1,5 @@
 .main.show.body-copy{ class: ("drafted" if @nursing_home.draft) }
-  .actions
+  .actions.top
     = link_to 'Visa alla boenden', root_path, class: "btn btn-small"
     - if current_user
       = link_to 'Redigera', edit_nursing_home_path(@nursing_home), class: "btn btn-small"
