--- a/app/assets/stylesheets/editors.css.scss
+++ b/app/assets/stylesheets/editors.css.scss
@@ -1,15 +1,15 @@
 // CKEditor styles to mimic rendered content
-h2, p {
-  margin: 0 0 14px;
-  font-family: Georgia;
-  font-size: 14px;
-  line-height: 19px;
-}
 h2 {
+  font-family:  Georgia;
   margin: 0;
-  font-weight: bold;
-  font-family: "Trebuchet MS", "DejaVu Sans", "Bitstream Vera Sans", sans-serif;
-  font-size: 17px;
-  line-height: 20px;
-  margin-bottom: 3px;
+  font-weight: normal;
+  font-size: 22px;
+  line-height: 24px;
+  margin-bottom: 4.4px;
+}
+p {
+  margin: 0 0 16px;
+  font-family:  Georgia;
+  font-size: 16px;
+  line-height: 22px;
 }
