--- a/app/views/nursing_homes/index.html.haml
+++ b/app/views/nursing_homes/index.html.haml
@@ -6,9 +6,9 @@
     %h1.title= "Hitta & jämför äldreboenden"
     = render 'filter'
 
-    / %ul.switch-view
-    /   %li.active= link_to "Översikt", '#tab-element-list'
-    /   %li= link_to "Visa på karta", '#tab-element-map'
+    %ul.switch-view
+      %li.active= link_to "Översikt", nursing_homes_path
+      %li= link_to "Visa på karta", nursing_homes_map_path
 
     %ul.results
       - @nursing_homes.each do |nursing_home|
