--- a/app/views/nursing_homes/index.html.haml
+++ b/app/views/nursing_homes/index.html.haml
@@ -7,7 +7,7 @@
     = render 'filter'
 
     %menu.switch-view
-      %li#as-list.active= link_to "Översikt", nursing_homes_path
+      %li#as-list.active= link_to "Visa som lista", nursing_homes_path
       %li#as-map= link_to "Visa på karta", nursing_homes_path
 
     %ul.results
