Icons for toggle between map and list

--- a/app/assets/stylesheets/results.css.scss
+++ b/app/assets/stylesheets/results.css.scss
@@ -61,5 +61,11 @@ ul.results {
     font-size: emize(15);
     display: inline;
     margin-right: 1em;
+    a {
+      color: black;
+      span:before {
+        margin-right: .4em;
+      }
+    }
   }
 }
