--- a/app/views/nursing_homes/index.html.haml
+++ b/app/views/nursing_homes/index.html.haml
@@ -7,8 +7,12 @@
     = render 'filter'
 
     %menu.switch-view
-      %li#as-list.active= link_to "Visa som lista", nursing_homes_path
-      %li#as-map= link_to "Visa på karta", nursing_homes_path
+      %li#as-list.active
+        %a{ href: nursing_homes_path }
+          %span.icon-list.icon-large= "Visa som lista"
+      %li#as-map
+        %a{ href: nursing_homes_path }
+          %span.icon-map-marker.icon-large= "Visa på karta"
 
     %ul.results
       - @nursing_homes.each do |nursing_home|
