--- a/app/assets/stylesheets/show.css.scss
+++ b/app/assets/stylesheets/show.css.scss
@@ -1,10 +1,10 @@
 .show {
   .description {
-    @include columns(7);
+    @include columns(6.5);
     margin-bottom: 1em;
   }
   #slideshow {
-    @include columns(5, true);
+    @include columns(5.5, true);
     margin: .3em 0 1em;
     .images {
       img {
@@ -34,6 +34,14 @@
         overflow: hidden;
       }
     }
+  }
+
+  #map {
+    display: none;
+    margin: 0 0 1em;
+    border: $border;
+    width: 100%;
+    height: 28em;
   }
 
   .show-on-map {
