--- a/app/views/layouts/_contact-box.html.haml
+++ b/app/views/layouts/_contact-box.html.haml
@@ -13,7 +13,8 @@
       - unless contact_data['post_code'].blank?
         %dd.post_code= "#{contact_data['post_code']} #{contact_data['postal_town']}"
       - unless contact_data['address'].blank?
-        %dd.map= link_to "Visa på karta", "#map", title: contact_data['address'], class: "show-on-map", "data-map-url" => url_for_map(contact_data['address'])
+        %dd.map= link_to "Visa på karta", "#map", title: contact_data['address'], class: "show-on-map",
+          data: { poi: contact_data['address'], "map-selector" => "#map" }
 
       - unless contact_data['email'].blank?
         %dd.epost= "E-post: #{contact_data['email']}"
