--- a/app/views/nursing_homes/show.html.haml
+++ b/app/views/nursing_homes/show.html.haml
@@ -23,7 +23,8 @@
     .compare-check
       = check_box_tag "compare-#{@nursing_home.id}", @nursing_home.id, false, "data-compare" => @nursing_home.id
       = label_tag "compare-#{@nursing_home.id}", "Lägg till i Min lista"
-    = link_to "Visa på karta", "#map", title: @nursing_home.address, id: "show-address-on-map", class: "show-on-map btn btn-small", "data-map-url" => url_for_map(@nursing_home.address)
+    = link_to "Visa på karta", "#map", class: "show-on-map btn btn-small",
+        data: { poi: @nursing_home.address, "map-selector" => "#map" }
     //eri-no-index
 
     %dl.details
