--- a/app/views/nursing_homes/show.html.haml
+++ b/app/views/nursing_homes/show.html.haml
@@ -24,7 +24,7 @@
       = check_box_tag "compare-#{@nursing_home.id}", @nursing_home.id, false, "data-compare" => @nursing_home.id
       = label_tag "compare-#{@nursing_home.id}", "Lägg till i Min lista"
     = link_to "Visa på karta", "#map", class: "show-on-map btn btn-small",
-        data: { poi: @nursing_home.address, "map-selector" => "#map" }
+        data: { poi: @nursing_home.address, "map-selector" => "#map", "scroll-to" => ".main h1" }
     //eri-no-index
 
     %dl.details
