Close button on map. Map icon on Show on map

--- a/app/assets/stylesheets/media_queries.css.scss
+++ b/app/assets/stylesheets/media_queries.css.scss
@@ -148,3 +148,12 @@
     }
   }
 }
+
+
+@media (max-width: 22em) {
+  // Hack to mask SBK:s label
+  a.close-map {
+    padding-right: 2em;
+    background: #dedede; // SBKs color
+  }
+}
