--- a/app/views/nursing_homes/show.html.haml
+++ b/app/views/nursing_homes/show.html.haml
@@ -25,7 +25,7 @@
       = label_tag "compare-#{@nursing_home.id}", "Lägg till i Min lista"
     %a.show-on-map.btn.btn-small{ href: "#map", data: { poi: @nursing_home.address, "map-selector" => "#map", "scroll-to" => ".main h1" }}
       %span.icon-map-marker
-      Visa på karta
+      = " Visa på karta"
 
     //eri-no-index
 
