--- a/app/assets/stylesheets/results.css.scss
+++ b/app/assets/stylesheets/results.css.scss
@@ -64,6 +64,7 @@ ul.results {
     a {
       color: black;
       span:before {
+        color: $backgroundDarker;
         margin-right: .4em;
       }
     }
