No indexing of test

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,6 +4,8 @@
     %meta{ charset: 'utf-8' }
     %meta{ name: 'viewport', content: 'width=device-width, initial-scale=1.0' }
     %title= page_title
+    - unless Rails.env.production?
+      %meta{ name: 'robots', content: 'noindex, nofollow' }
     /[if IE]
       %meta{ "http-equiv" => "X-UA-Compatible", "content" => "IE=edge"}
     /[if lte IE 8]
