Changed .main to

--- a/app/views/nursing_homes/edit.html.haml
+++ b/app/views/nursing_homes/edit.html.haml
@@ -1,4 +1,4 @@
-.main
+main
   .body-copy
     %menu.actions
       %li= link_to delete_icon_text, nursing_home_path(@nursing_home), confirm: 'Vill du ta bort äldreboendet?', method: :delete, class: "btn btn-danger btn-small"
