--- a/app/views/users/apply.html.haml
+++ b/app/views/users/apply.html.haml
@@ -1,4 +1,4 @@
-.main.body-copy
+%main.body-copy{ role: :main }
   %h1= "Åtkomst till systemet Äldreboenden"
   %p= "Kontakta någon av följande administratörer för att ansöka om åtkomst till systemet för Äldreboenden"
   %ul
