--- a/app/assets/stylesheets/grid.css.scss
+++ b/app/assets/stylesheets/grid.css.scss
@@ -1,20 +1,16 @@
-body {
-  padding: 0 .5em;
-  min-width: 58em;
-  margin-top: 0;
-  margin-right: 1em;
-  margin-left: 1em;
-  margin-bottom: 2em;
+.wrapper {
+  @include clearfix();
+  margin: 0 auto;
+  max-width: 55em;
+  padding: 0 1em;
+  @media (max-width: 48em) {
+    max-width: 34em;
+  }
 }
-
-#malmo-masthead,.wrapper {
-  max-width: 58em;
-}
-
 .wrapper {
   margin: 0 auto;
   @include clearfix();
-  > .main {
+  > main {
     @include columns(9);
   }
   > aside {
