--- a/app/views/nursing_homes/index.html.haml
+++ b/app/views/nursing_homes/index.html.haml
@@ -1,4 +1,4 @@
-.main
+%main
   - if current_user
     .actions.top
       = link_to add_icon_text, new_nursing_home_path, class: "btn btn-small btn-primary"
