--- a/app/views/nursing_homes/not_found.html
+++ b/app/views/nursing_homes/not_found.html
@@ -1,4 +1,4 @@
-<div class="main show body-copy">
+<main class="show body-copy" role="main">
   <h1>Sidan kunde inte hittas</h1>
   <p>Prova att söka efter sidan i sökfältet uppe till höger eller använd menyerna.</p>
-</div>
+</main>
